# tanOS_kernel

./: Cargo.toml  Makefile  boot.asm  config.toml  justfile  linker_kernel.ld  x86_64-tanos.json
src/: boot.asm  main.rs
