[package]
name              = "tanOS_kernel"
version           = "0.1.0"
edition           = "2021"
autobins          = false
autoexamples      = false
autotests         = false
autobenches       = false

[lib]
name       = "tanos"
path       = "src/main.rs"
crate-type = ["staticlib"]

[profile.release]
panic         = "abort"
opt-level     = 2
lto           = true
codegen-units = 1